k8s/local-cluster/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argo
spec:
  ingressClassName: "traefik"
  rules:
    - host: argocd.localdev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-argocd-server
                port:
                  name: http
